SmartHire_App/force-app/main/default/objects/ApplicationStatusHistory__c/ApplicationStatusHistory__c.object-meta.xml
<CustomObject>
    <label>Application Status History</label>
    <nameField>
        <displayFormat>ASH-{0000}</displayFormat>
        <label>History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Status Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>