SmartHire_App/force-app/main/default/objects/ApplicationStatusHistory__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Status History</relationshipLabel>
    <relationshipName>Status_History</relationshipName>
    <type>Lookup</type>
</CustomField>