SmartHire_App/force-app/main/default/objects/ApplicationStatusHistory__c/fields/JobApplication__c.field-meta.xml
<CustomField>
    <fullName>JobApplication__c</fullName>
    <label>Job Application</label>
    <referenceTo>Job_Application__c</referenceTo>
    <relationshipLabel>Application Status Histories</relationshipLabel>
    <relationshipName>Application_Status_Histories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>