SmartHire_App/force-app/main/default/objects/ApplicationStatusHistory__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Interview Scheduled</fullName>
            </value>
            <value>
                <fullName>Offer Extended</fullName>
            </value>
            <value>
                <fullName>Hired</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField> 